kubernetes/applications/infra/storage/longhorn/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui-private
  namespace: infra-storage
spec:
  parentRefs:
    - name: private
      namespace: infra-tailscale # Explicitly points across namespaces to your Tailscale Gateway
  hostnames:
    - 'longhorn.private.${CLUSTER_DOMAIN}'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80

---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui-internal
  namespace: infra-storage
spec:
  parentRefs:
    - name: internal
      namespace: infra-gateway
  hostnames:
    - 'longhorn.internal.${CLUSTER_DOMAIN}'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
